Archive2/27/652a4da51f02a3/output
main.cpp:6:5: error: 'function' in namespace 'std' does not name a type
     std::function<void()> begin;
     ^
main.cpp:7:5: error: 'function' in namespace 'std' does not name a type
     std::function<void()> end;
     ^
main.cpp: In function 'int main()':
main.cpp:14:12: error: 'class Sensor' has no member named 'begin'
    sensor->begin = [](){std::cout << "Started \n";}
            ^
main.cpp:15:4: error: expected ';' before 'sensor'
    sensor->end = [](){std::cout << "Ended \n";}
    ^
main.cpp:17:12: error: 'class Sensor' has no member named 'begin'
    sensor->begin();
            ^
main.cpp:18:12: error: 'class Sensor' has no member named 'end'
    sensor->end();
            ^
